--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ table#t03{
 	   <table id = "t01">
   <tr>
     
-<th><img src=Gastech-Logo-2.png" width =228px ; height = 80px; style = "float:right"</th>
+<th><img src="Gastech-Logo-2.png" width =228px ; height = 80px; style = "float:right"</th>
     <th>An Interactive Storyboard on Internal Emails of GAStech</th>
     
   </tr>
