--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <!-- This page is copyright Elated Communications Ltd. (www.elated.com) -->
 
@@ -244,7 +244,7 @@ margin-right:auto;
 
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.js"></script>
+<script src="https://d3js.org/d3.v3.js"></script>
 <script>
     //Source code from: https://gist.github.com/timelyportfolio/5049980
     //Credits http://jsfiddle.net/tristanreid/xReHA/636/ for Node Highlight function
