--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <!-- This page is copyright Elated Communications Ltd. (www.elated.com) -->
 
-    <title>JavaScript tabs example</title>
+    <title>IS428 Forensic Ninja: Group Project</title>
 
     <style type="text/css">
       body { font-size: 16px; font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
